apps/minio/minio-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: minio-public-access
  namespace: minio-stage
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: Host(`minio.hephy.pro`)
    services:
    - kind: Service
      name: deis-minio
      namespace: minio-stage
      port: 9000
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: minio-public-access-https
  namespace: minio-stage
spec:
  entryPoints:
    - websecure
  routes:
  - kind: Rule
    match: Host(`minio.hephy.pro`)
    services:
    - kind: Service
      name: deis-minio
      namespace: minio-stage
      port: 9000
  tls:
    certResolver: prodresolver
